fixing pie chart spacing

--- a/frontend/src/app/components/pie-chart/pie-chart.component.css
+++ b/frontend/src/app/components/pie-chart/pie-chart.component.css
@@ -9,11 +9,11 @@ ngx-charts-pie-chart {
   display: block;
   margin: 0 auto;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  margin-bottom: 5%;
+  width: 80%;
+  height:90%;
   overflow: hidden; /* Hide scrollbars */
 }
-
 .pie-chart-container {
   background-color: #fff7e6;
   border: 1px solid #ddd;
